Fri Oct  1 11:40:44 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Changed to refer to $(ACE_BUILDDIR)/Kokyu/libKokyu.la instead of
	  -lKokyu.

Fri Oct  1 11:29:39 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Fault_Detector/Fault_Detector.mpc:
	* orbsvcs/Fault_Notifier/Fault_Notifier.mpc:

	  Changed to inherit from core so that executables will be
	  installed.

Fri Oct  1 18:22:33 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/ORB_Core.cpp (get_policy_including_current):

	  Some more problems that missed the last checkin.

Fri Oct  1 18:13:17 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Default_Protocols_Hooks.cpp:
	* tao/ORB_Core.cpp:
	* tao/ORB_Core.h:
	* tao/Remote_Invocation.cpp:
	* tao/Stub.cpp:

	  Fixed improper use of exception macros.

Fri Oct  1 17:25:29 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/RTCORBA/RT_Policy_i.h (create_transport_protocol_property):

	  Made the second argument to defaul to zero. This fix may not be
	  right. Need to run this by  Irfan. Until then some of the
	  compilation failures will be fixed.

Thu Sep 30 17:08:43 2004  Irfan Pyarali  <irfan@oomworks.com>

	* orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Connector.cpp:

	  Transport.h needs to be included.

Thu Sep 30 16:53:48 2004  Irfan Pyarali  <irfan@oomworks.com>

	* tao/Protocols_Hooks.h:

	  Added export directives to the class declarations.

	* tao/Connection_Handler.{h,inl} (TAO_Connection_Handler):

	  Gave the set_dscp_codepoint() method a default no-op
	  implementation.  This way local protocols will not have to
	  bother overwriting this method.

	* tao/Strategies/UIOP_Connection_Handler.{h,cpp}:
	* tao/Strategies/SHMIOP_Connection_Handler.{h,cpp}:

	  Removed no-op implementation of set_dscp_codepoint().

	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Util.{h,cpp}:

	  SSLIOP::Util::setup_handler_state no longer needed.  However, a