@@ -42,7 +42,8 @@ TAO_Policy_Manager::set_policy_overrides (
 }
 
 ACE_INLINE CORBA::Policy_ptr
-TAO_Policy_Manager::get_cached_policy (TAO_Cached_Policy_Type type)
+TAO_Policy_Manager::get_cached_policy (TAO_Cached_Policy_Type type
+                                       ACE_ENV_ARG_DECL)
 {
 
   // @@ Previous code used a "double-checked locking hack" to check
@@ -52,7 +53,8 @@ TAO_Policy_Manager::get_cached_policy (TAO_Cached_Policy_Type type)
 
   ACE_GUARD_RETURN (TAO_SYNCH_MUTEX, ace_mon, this->mutex_, 0);
 
-  return this->impl_.get_cached_policy (type);
+  return this->impl_.get_cached_policy (type
+                                        ACE_ENV_ARG_PARAMETER);
 }
 
 
@@ -79,9 +81,11 @@ TAO_Policy_Current_Impl::get_policy (
 }
 
 ACE_INLINE CORBA::Policy_ptr
-TAO_Policy_Current_Impl::get_cached_policy (TAO_Cached_Policy_Type type)
+TAO_Policy_Current_Impl::get_cached_policy (TAO_Cached_Policy_Type type
+                                            ACE_ENV_ARG_DECL)
 {
-  return this->manager_impl_.get_cached_policy (type);
+  return this->manager_impl_.get_cached_policy (type
+                                                ACE_ENV_ARG_PARAMETER);
 }
 
 // ****************************************************************
@@ -121,9 +125,11 @@ TAO_Policy_Current::set_policy_overrides (const CORBA::PolicyList & policies,
 }
 
 ACE_INLINE CORBA::Policy_ptr
-TAO_Policy_Current::get_cached_policy (TAO_Cached_Policy_Type type)
+TAO_Policy_Current::get_cached_policy (TAO_Cached_Policy_Type type
+                                       ACE_ENV_ARG_DECL)
 {
   TAO_Policy_Current_Impl &impl = this->implementation ();
 
-  return impl.get_cached_policy (type);
+  return impl.get_cached_policy (type
+                                 ACE_ENV_ARG_PARAMETER);
 }
